# sec-risk-api

./: .dockerignore  .gitignore  Dockerfile  JOURNAL.md  LICENSE  README.md  api_keys.example.json  api_keys.json  docker-compose.yml  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: aapl-20250927.html
documentation/: DRIFT_DETECTION_CRON.md
documentation/feature-peer-comparison/: ISSUE83_PEER_DOWNLOAD.md
output/: HURC_Peer_Comparison_2024.yaml
prompts/: README.md
scripts/: analyze_filing.py  batch_analyze_tesla.py  demo_peer_discovery.py  download_peers_and_target.py  generate_peer_comparison_report.py  generate_yoy_report.py
src/sec_risk_api/: api.py  auth.py  ingest.py  integration.py  monitoring.py  processing.py  scoring.py
src/sigmak/: __init__.py  api.py  auth.py  config.py  drift_detection.py  drift_scheduler.py  filings_db.py  indexing_pipeline.py  ingest.py  init_vector_db.py  integration.py  llm_classifier.py  llm_storage.py  monitoring.py  peer_discovery.py  risk_classifier.py  scoring.py  tasks.py
tests/: .test_ingestion.py.swp  test_api.py  test_async_task_queue.py  test_auth.py  test_chroma_infra.py  test_download_peers_and_target.py  test_drift_detection.py  test_embeddings.py  test_hybrid_search_reranking.py  test_indexing_pipeline.py  test_ingestion.py  test_integration_pipeline.py  test_monitoring_logging.py  test_processing.py  test_risk_taxonomy_and_prompts.py  test_scoring.py
